--- a/UniversitySport/app/src/main/res/values/strings.xml
+++ b/UniversitySport/app/src/main/res/values/strings.xml
@@ -187,4 +187,7 @@
 
 
     <string name="manual_open_permission_hint">定位权限已被禁用，请手动开启定位权限</string>
+    <!--广告-->
+    <string name="gdtslogan">GDTslogan</string>
+    <string name="click_to_skip">点击跳过</string>
 </resources>
