修改了一下运动前提示用语

--- a/UniversitySport/app/src/main/res/values/strings.xml
+++ b/UniversitySport/app/src/main/res/values/strings.xml
@@ -182,7 +182,7 @@
 
     <!--运动准备-->
     <string name="gpsLocationing">GPS定位中，请走到开阔地带</string>
-    <string name="readyToSport">请做好热身准备</string>
+    <string name="readyToSport">请做好热身准备，并且保持网络畅通，电量充足，心情愉快</string>
     <string name="remainPower">当前剩余电量%s%%</string>
 
     <!--锻炼结果-->
